[package]
name = "sing-box-conv"
version = "0.1.0"
edition = "2021"
authors = [ "hakutaku <qq20099@outlook.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.2" }
worker-macros = { version="0.4.2" }
console_error_panic_hook = { version = "0.1.1" }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3"}
serde-wasm-bindgen = "0.5"
wasm-bindgen-futures = "0.4.45"
