[package]
name = "sing-box-conv"
version = "0.1.0"
edition = "2021"
authors = [ "hakutaku <qq20099@outlook.com>" ]

[package.metadata.release]
release = true

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = true

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.4.2" }
worker-macros = { version="0.4.2" }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "1.0.1"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.45"